--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <style>
-/* 动态视频背景 */
+/* 视频背景 */
 #bgVideo {
   position: fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
+  top:0; left:0;
+  width:100%; height:100%;
   object-fit: cover;
   z-index:-1;
 }
@@ -21,9 +19,9 @@
 /* 粒子背景 */
 #particles {
     position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    pointer-events: none;
+    top:0; left:0;
+    width:100%; height:100%;
+    pointer-events:none;
     z-index:0;
 }
 
@@ -36,9 +34,7 @@ body {
     overflow-x: hidden;
     transition: background 0.5s, color 0.5s;
 }
-body.dark {
-    color: #eee;
-}
+body.dark { color: #eee; }
 
 /* 头部 */
 header {
@@ -48,16 +44,15 @@ header {
     z-index: 2;
 }
 header img {
-    width: 140px;
-    height: 140px;
+    width: 140px; height: 140px;
     border-radius: 50%;
     border: 4px solid white;
     margin-bottom: 20px;
     transition: transform 0.3s ease;
 }
 header img:hover { transform: scale(1.1); }
-header h1 { margin: 10px 0; font-size: 36px; }
-header p { font-size: 18px; margin: 5px 0; }
+header h1 { margin:10px 0; font-size:36px; }
+header p { font-size:18px; margin:5px 0; }
 
 /* 导航 */
 nav {
@@ -65,90 +60,66 @@ nav {
     background: rgba(0,0,0,0.2);
     padding: 10px 0;
     position: sticky;
-    top: 0;
-    z-index: 5;
-    border-radius: 10px;
+    top:0;
+    z-index:5;
+    border-radius:10px;
     transition: background 0.3s, box-shadow 0.3s;
 }
 nav.scrolled {
     background: rgba(0,0,0,0.7);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    box-shadow:0 4px 10px rgba(0,0,0,0.3);
 }
 nav a {
-    margin: 0 15px;
+    margin:0 15px;
     text-decoration: none;
-    color: white;
+    color:white;
     font-weight: bold;
     transition: 0.3s;
 }
-nav a.active { color: #ffeb3b; }
-nav a:hover { color: #ffeb3b; }
+nav a.active { color:#ffeb3b; }
+nav a:hover { color:#ffeb3b; }
 
 /* 日/夜切换按钮 */
 #modeToggle {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 8px 15px;
+    position: fixed; top:20px; right:20px;
+    padding:8px 15px;
     background: linear-gradient(45deg,#2196F3,#21CBF3);
-    color: white;
-    border-radius: 20px;
-    cursor: pointer;
-    z-index: 10;
+    color:white; border-radius:20px;
+    cursor:pointer; z-index:10;
     transition: background 0.3s;
 }
 #modeToggle:hover { background: linear-gradient(45deg,#1976d2,#1aa8c7); }
 
 /* 返回顶部 */
 #toTopBtn {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
+    position: fixed; bottom:30px; right:30px;
     background: linear-gradient(45deg,#4caf50,#81c784);
-    color: white;
-    border: none;
-    padding: 12px 18px;
-    border-radius: 50px;
-    cursor: pointer;
-    font-size: 16px;
-    z-index: 10;
-    display: none;
+    color:white; border:none; padding:12px 18px; border-radius:50px;
+    cursor:pointer; font-size:16px; z-index:10; display:none;
     transition: 0.3s;
 }
 #toTopBtn:hover { background: linear-gradient(45deg,#388e3c,#66bb6a); }
 
 /* 分区 */
-section {
-    padding: 60px 20px;
-    text-align: center;
-    position: relative;
-    z-index: 2;
-}
-section h2 {
-    font-size: 28px;
-    color: #4CAF50;
-    margin-bottom: 30px;
-}
+section { padding: 60px 20px; text-align:center; position:relative; z-index:2; }
+section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
 
 /* 卡片 */
 .card {
     background: rgba(255,255,255,0.95);
     color: #333;
-    padding: 30px 20px;
-    border-radius: 15px;
+    padding:30px 20px;
+    border-radius:15px;
     width: 320px;
-    margin: 0 auto 40px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+    margin:0 auto 40px;
+    box-shadow:0 6px 20px rgba(0,0,0,0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.8s ease, background 0.5s, color 0.5s;
-    opacity: 0;
+    opacity:0;
     transform: translateY(30px) scale(0.95);
 }
-.card.show { opacity:1; transform:translateY(0) scale(1);}
-.card:hover { transform: scale(1.05); box-shadow:0 12px 30px rgba(0,0,0,0.3);}
-body.dark .card { background: rgba(50,50,50,0.9); color: #eee; }
-.card .tags { margin-top:10px; }
-.card .tag { display:inline-block; background: linear-gradient(45deg,#ff6b6b,#ffcc33); color:white; padding:5px 10px; margin:3px; border-radius:15px; font-size:12px; transition: transform 0.2s; }
-.card .tag:hover { transform: scale(1.1); }
+.card.show { opacity:1; transform:translateY(0) scale(1); }
+.card:hover { transform: scale(1.05); box-shadow:0 12px 30px rgba(0,0,0,0.3); }
+body.dark .card { background: rgba(50,50,50,0.9); color:#eee; }
 
 /* 联系我 */
 .contact .qr { display:flex; justify-content:center; margin-top:20px; }
@@ -179,7 +150,7 @@ body.dark .card { background: rgba(50,50,50,0.9); color: #eee; }
 <header>
     <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233412_9_79.jpg?raw=true" alt="头像">
     <h1>欢迎来到 Happy 的主页</h1>
-    <p>记录我的日常和点滴 😊</p>
+    <p>Hi 我是happy 我来自河南郑州市 目前是郑州市西亚斯大一学生 在此我想分享我的生活</p>
     <nav id="mainNav">
         <a href="#about">关于我</a>
         <a href="#diary">日记</a>
@@ -193,14 +164,8 @@ body.dark .card { background: rgba(50,50,50,0.9); color: #eee; }
 <!-- 关于我 -->
 <section id="about">
     <h2>关于我</h2>
-    <div class="card">
-        <p>Hi，我是 Happy，我来自河南郑州市，目前是郑州市西亚斯大一学生。在此我想分享我的生活。</p>
-        <div class="tags">
-            <span class="tag">学习</span>
-            <span class="tag">游戏</span>
-            <span class="tag">音乐</span>
-            <span class="tag">编程</span>
-        </div>
+    <div class="card show">
+        <p>Hi 我是happy 我来自河南郑州市 目前是郑州市西亚斯大一学生 在此我想分享我的生活</p>
     </div>
 </section>
 
@@ -212,7 +177,7 @@ body.dark .card { background: rgba(50,50,50,0.9); color: #eee; }
     <div class="card">
         <input type="date" id="diaryDate" style="padding:5px;margin-bottom:5px;width:95%;" />
         <input type="password" id="diaryPwd" placeholder="密码(可选)" style="padding:5px;margin-bottom:5px;width:95%;" />
-        <textarea id="diaryContent" placeholder="写下今天的日记..." rows="3" style="padding:5px;width:95%;"></textarea>
+        <textarea id="diaryContent" placeholder="写下今天的日记..." rows="3" style="padding:5px;width:95%;">2025年12月8日 今天是我初次创建我的个人网站 目前还在测试中 以后我会逐步完善耶✌</textarea>
         <button id="addDiaryBtn" style="margin-top:5px;padding:5px 10px;cursor:pointer;">添加日记</button>
     </div>
 
@@ -240,7 +205,7 @@ body.dark .card { background: rgba(50,50,50,0.9); color: #eee; }
 </div>
 
 <script>
-// 初始化 Supabase
+// Supabase 初始化
 const supabaseUrl = 'https://ydpqboowpfijppwgrals.supabase.co';
 const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlkcHFib293cGZpanBwd2dyYWxzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUxNDI0NjAsImV4cCI6MjA4MDcxODQ2MH0.6uF8nCdjVzaevZroBoA7isiVWAZ6k5LXlAwQrbuYWYM';
 const supabase = supabase.createClient(supabaseUrl, supabaseKey);
@@ -250,9 +215,7 @@ function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     cards.forEach(card => {
         const rect = card.getBoundingClientRect();
-        if (rect.top < window.innerHeight - 50) {
-            card.classList.add('show');
-        }
+        if (rect.top < window.innerHeight - 50) card.classList.add('show');
     });
 }
 window.addEventListener('scroll', showOnScroll);
@@ -265,80 +228,56 @@ let particlesArray = [];
 let mouse = {x:null, y:null};
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
-window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; initParticles(); });
-window.addEventListener('mousemove', e => { mouse.x = e.x; mouse.y = e.y; });
-
-class Particle {
-    constructor(){
-        this.x=Math.random()*canvas.width;
-        this.y=Math.random()*canvas.height;
-        this.size=Math.random()*3+1;
-        this.speedX=Math.random()*2-1; // 加快
-        this.speedY=Math.random()*2-1;
-    }
-    update(){
-        this.x += this.speedX + (mouse.x? (mouse.x - this.x)*0.001:0);
-        this.y += this.speedY + (mouse.y? (mouse.y - this.y)*0.001:0);
-        if(this.x>canvas.width)this.x=0;
-        if(this.x<0)this.x=canvas.width;
-        if(this.y>canvas.height)this.y=0;
-        if(this.y<0)this.y=canvas.height;
-    }
-    draw(){
-        ctx.fillStyle='rgba(255,255,255,0.7)';
-        ctx.beginPath();
-        ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-        ctx.fill();
-    }
-}
-function initParticles(){ particlesArray=[]; for(let i=0;i<200;i++){ particlesArray.push(new Particle()); } }
-function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
+window.addEventListener('resize',()=>{ canvas.width=window.innerWidth; canvas.height=window.innerHeight; initParticles(); });
+window.addEventListener('mousemove',e=>{ mouse.x=e.x; mouse.y=e.y; });
+class Particle{constructor(){this.x=Math.random()*canvas.width;this.y=Math.random()*canvas.height;this.size=Math.random()*3+1;this.speedX=Math.random()*2-1;this.speedY=Math.random()*2-1;}update(){this.x+=this.speedX+(mouse.x?(mouse.x-this.x)*0.001:0);this.y+=this.speedY+(mouse.y?(mouse.y-this.y)*0.001:0);if(this.x>canvas.width)this.x=0;if(this.x<0)this.x=canvas.width;if(this.y>canvas.height)this.y=0;if(this.y<0)this.y=canvas.height;}draw(){ctx.fillStyle='rgba(255,255,255,0.7)';ctx.beginPath();ctx.arc(this.x,this.y,this.size,0,Math.PI*2);ctx.fill();}}
+function initParticles(){particlesArray=[];for(let i=0;i<200;i++){particlesArray.push(new Particle());}}
+function animateParticles(){ctx.clearRect(0,0,canvas.width,canvas.height);particlesArray.forEach(p=>{p.update();p.draw();});requestAnimationFrame(animateParticles);}
 initParticles();
 animateParticles();
 
 // 微信二维码弹窗
-const qrImg = document.getElementById('qrImg');
-const qrModal = document.getElementById('qrModal');
-qrImg.addEventListener('click', () => qrModal.classList.add('show'));
-qrModal.addEventListener('click', () => qrModal.classList.remove('show'));
+const qrImg=document.getElementById('qrImg');
+const qrModal=document.getElementById('qrModal');
+qrImg.addEventListener('click',()=>qrModal.classList.add('show'));
+qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
 
 // 日夜模式切换
-const modeToggle = document.getElementById('modeToggle');
-modeToggle.addEventListener('click', () => { document.body.classList.toggle('dark'); });
+const modeToggle=document.getElementById('modeToggle');
+modeToggle.addEventListener('click',()=>{document.body.classList.toggle('dark');});
 
 // 导航高亮 + 返回顶部
-const mainNav = document.getElementById('mainNav');
-const navLinks = mainNav.querySelectorAll('a');
-const toTopBtn = document.getElementById('toTopBtn');
-window.addEventListener('scroll', () => {
+const mainNav=document.getElementById('mainNav');
+const navLinks=mainNav.querySelectorAll('a');
+const toTopBtn=document.getElementById('toTopBtn');
+window.addEventListener('scroll',()=>{
     if(window.scrollY>50) mainNav.classList.add('scrolled'); else mainNav.classList.remove('scrolled');
-    navLinks.forEach(link => {
-        const section = document.querySelector(link.getAttribute('href'));
-        if(section.offsetTop - 70 <= window.scrollY && section.offsetTop + section.offsetHeight > window.scrollY){
-            link.classList.add('active'); } else{ link.classList.remove('active'); }
+    navLinks.forEach(link=>{
+        const section=document.querySelector(link.getAttribute('href'));
+        if(section.offsetTop-70<=window.scrollY && section.offsetTop+section.offsetHeight>window.scrollY) link.classList.add('active'); else link.classList.remove('active');
     });
-    if(window.scrollY > 200) toTopBtn.style.display = 'block'; else toTopBtn.style.display = 'none';
+    if(window.scrollY>200) toTopBtn.style.display='block'; else toTopBtn.style.display='none';
 });
-toTopBtn.addEventListener('click', () => { window.scrollTo({top:0, behavior:'smooth'}); });
+toTopBtn.addEventListener('click',()=>{window.scrollTo({top:0,behavior:'smooth'});});
 
 // Supabase 日记功能
-const diaryList = document.getElementById('diaryList');
-const addDiaryBtn = document.getElementById('addDiaryBtn');
-const diaryDate = document.getElementById('diaryDate');
-const diaryContent = document.getElementById('diaryContent');
-const diaryPwd = document.getElementById('diaryPwd');
+const diaryList=document.getElementById('diaryList');
+const addDiaryBtn=document.getElementById('addDiaryBtn');
+const diaryDate=document.getElementById('diaryDate');
+const diaryContent=document.getElementById('diaryContent');
+const diaryPwd=document.getElementById('diaryPwd');
 
 async function fetchDiaries(){
-    const { data, error } = await supabase.from('diaries').select('*').order('id', { ascending: false });
-    if(error){ console.log(error); return; }
-    diaryList.innerHTML = '';
-    data.forEach(d => { addDiaryCard(d); });
+    const { data, error } = await supabase.from('diaries').select('*').order('id',{ascending:false});
+    if(error){console.log(error); return;}
+    diaryList.innerHTML='';
+    data.forEach(d=>{ addDiaryCard(d); });
 }
 
 function addDiaryCard(d){
-    const card = document.createElement('div');
-    card.className = 'card show';
-    card.innerHTML = `
+    const card=document.createElement('div');
+    card.className='card show';
+    card.innerHTML=`
         <p><strong>${d.date}</strong></p>
         <p>${d.content}</p>
         ${d.password ? '<small>🔒已加密</small>' : ''}
@@ -350,12 +289,12 @@ function addDiaryCard(d){
     diaryList.appendChild(card);
 }
 
-addDiaryBtn.addEventListener('click', async () => {
-    const dateVal = diaryDate.value;
+addDiaryBtn.addEventListener('click', async ()=>{
+    const dateVal = diaryDate.value || new Date().toISOString().split('T')[0];
     const contentVal = diaryContent.value.trim();
     const pwdVal = diaryPwd.value.trim();
-    if(!dateVal||!contentVal){ alert('请填写日期和内容'); return; }
-    const { data, error } = await supabase.from('diaries').insert([{date:dateVal, content:contentVal, password: pwdVal}]);
+    if(!contentVal){ alert('请填写日记内容'); return; }
+    const { data, error } = await supabase.from('diaries').insert([{date:dateVal, content:contentVal, password:pwdVal}]);
     if(error){ alert(error.message); return; }
     diaryDate.value=''; diaryContent.value=''; diaryPwd.value='';
     fetchDiaries();
@@ -370,7 +309,7 @@ async function deleteDiary(id){
 
 async function editDiary(id){
     const newContent = prompt('请输入新的日记内容：');
-    if(newContent === null) return;
+    if(newContent===null) return;
     const { error } = await supabase.from('diaries').update({content:newContent}).eq('id',id);
     if(error){ alert(error.message); return; }
     fetchDiaries();
