--- a/index.html
+++ b/index.html
@@ -11,23 +11,20 @@ body, html {
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
   color:#333;
   overflow-x:hidden;
-  transition: color 0.5s, background 0.5s, filter 0.3s;
+  transition: color 0.5s, filter 0.3s;
   scroll-behavior: smooth;
 }
 body.dark { color:#eee; }
 
-/* ---------------- 背景 ---------------- */
-body {
-  background: url('https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/preview.jpg?raw=true') no-repeat center center fixed;
-  background-size: cover;
-  position: relative;
-  filter: brightness(1);
-  transition: filter 0.3s;
+/* ---------------- 背景视频 ---------------- */
+#bgVideo {
+  position:fixed; top:0; left:0;
+  width:100%; height:100%;
+  object-fit:cover;
+  z-index:0;
+  transition: filter 0.5s;
 }
-body.dark {
-  background-color: rgba(0,0,50,0.5);
-  background-blend-mode: overlay;
-}
+body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
 /* ---------------- 粒子画布 ---------------- */
 #particles {
@@ -145,6 +142,9 @@ textarea, input[type="date"] {
 </head>
 <body>
 
+<video id="bgVideo" autoplay muted loop>
+  <source src="https://github.com/Happyma-4869/Happyma-4869.github.io/raw/refs/heads/main/Video%20Project%204.mp4" type="video/mp4">
+</video>
 <canvas id="particles"></canvas>
 
 <header>
@@ -312,20 +312,11 @@ qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
 // ---------------- 卡片滚动动画 + 光晕 & 背景亮度 ----------------
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
-    const windowBottom = window.innerHeight;
+    const windowBottom = window.innerHeight * 0.85;
     cards.forEach(card => {
         const rect = card.getBoundingClientRect();
-        if (rect.top < windowBottom - 50) {
-            card.classList.add('show');
-            // 光晕动画
-            card.style.boxShadow = '0 16px 40px rgba(0,0,0,0.15), 0 0 20px rgba(0,122,255,0.2)';
-        } else {
-            card.style.boxShadow = '';
-        }
+        if (rect.top < windowBottom) card.classList.add('show');
     });
-    // 背景亮度随滚动微调
-    let scrollPercent = Math.min(window.scrollY / (document.body.scrollHeight - window.innerHeight), 1);
-    document.body.style.filter = `brightness(${1 - 0.15*scrollPercent})`;
 }
 window.addEventListener('scroll', showOnScroll);
 window.addEventListener('load', showOnScroll);
