--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ body.dark { color:#eee; }
   width:100%; height:100%;
   object-fit:cover;
   z-index:0;
-  transition: filter 0.5s;
+  transition: filter 0.5s, transform 0.2s, opacity 0.3s;
+  will-change: transform, opacity;
 }
 body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
@@ -39,7 +40,6 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
   background: rgba(255,255,255,0.6);
   backdrop-filter: blur(20px);
   border-radius: 25px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.1);
   padding:25px 20px;
   display:flex;
   flex-direction:column;
@@ -48,12 +48,26 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
   margin:0 auto 40px;
   opacity:0;
   transform: translateY(20px);
-  transition: transform 0.6s cubic-bezier(0.5,0,0.1,1), opacity 0.6s, box-shadow 0.4s, background 0.5s;
+  transition: transform 0.6s cubic-bezier(0.5,0,0.1,1), opacity 0.6s, background 0.5s;
+  box-shadow:0 8px 30px rgba(0,0,0,0.1);
+  position:relative;
 }
 .card.show { opacity:1; transform: translateY(0); }
-.card:hover { transform: translateY(-5px); box-shadow: 0 16px 40px rgba(0,0,0,0.15); }
-body.dark .card { background: rgba(40,40,40,0.7); color:#eee; box-shadow:0 8px 30px rgba(255,255,255,0.1); }
+.card:hover { transform: translateY(-5px); }
+body.dark .card { background: rgba(40,40,40,0.7); color:#eee; }
 
+/* 光晕容器 */
+.card::before {
+  content:"";
+  position:absolute;
+  top:-10px; left:-10px; right:-10px; bottom:-10px;
+  border-radius:30px;
+  pointer-events:none;
+  box-shadow:0 0 50px rgba(0,0,0,0.05);
+  transition: box-shadow 0.3s;
+}
+
+/* ---------------- 标签 ---------------- */
 .card .tags { margin-top:10px; text-align:center; }
 .card .tag {
   display:inline-block;
@@ -188,7 +202,6 @@ textarea, input[type="date"] {
   <h2>联系我</h2>
   <p>微信：<strong>H4ppy_ma</strong></p>
   <p>QQ邮箱：<strong>1348790438@qq.com</strong></p>
-  <p>GitHub：<strong>Happyma-4869</strong></p>
   <div class="contact">
       <div class="qr">
           <img id="qrImg" src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码">
@@ -309,14 +322,23 @@ const qrModal=document.getElementById('qrModal');
 qrImg.addEventListener('click',()=>qrModal.classList.add('show'));
 qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
 
-// ---------------- 卡片滚动动画 + 光晕 & 背景亮度 ----------------
+// ---------------- 卡片滚动动画 + 背景视差 + 阴影光晕 ----------------
+const bgVideo=document.getElementById('bgVideo');
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
-    const windowBottom = window.innerHeight * 0.85;
+    const scrollY = window.scrollY;
     cards.forEach(card => {
         const rect = card.getBoundingClientRect();
-        if (rect.top < windowBottom) card.classList.add('show');
+        if(rect.top < window.innerHeight - 50) card.classList.add('show');
+        // 光晕增强
+        const centerDist = Math.abs((rect.top + rect.height/2) - window.innerHeight/2);
+        const intensity = Math.max(0, 1 - centerDist/window.innerHeight);
+        const glow = intensity * (document.body.classList.contains('dark')? 0.6 : 0.3);
+        card.style.boxShadow = `0 8px 30px rgba(0,0,0,${0.1 + glow}) , 0 0 20px rgba(0, 122, 255, ${glow})`;
     });
+    // 背景视差
+    const scroll = window.scrollY;
+    bgVideo.style.transform = `translateY(${scroll*0.25}px)`;
 }
 window.addEventListener('scroll', showOnScroll);
 window.addEventListener('load', showOnScroll);
